# simple-hdr-widget

./: README.md  nuxt.config.js  package.json
.github/workflows/: main.yml
app/: app.vue
app/assets/styles/base/: base.scss  index.scss
app/assets/styles/utils/: index.scss  utils.scss  variables.scss
app/components/common/: Image.vue
app/components/ui/: Button.vue
app/composables/: useDraggable.js  useHdr.js  useWindowControls.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
