[package]
name = "hdr-widget"
version = "0.1.0"
description = "A Tauri App"
authors = ["NetherG"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-positioner = "2.3.1"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Devices_Display",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging"
] }
tokio = {version = "1.49.0", features = ["time"] }
